--- a/pom.xml
+++ b/pom.xml
@@ -162,14 +162,15 @@
    </dependencies>
    <build>
        <plugins>
-           <plugin>
-               <groupId>org.apache.maven.plugins</groupId>
-               <artifactId>maven-surefire-plugin</artifactId>
-               <version>3.5.3</version>
-               <configuration>
-                   <skipTests>true</skipTests>
-               </configuration>
-           </plugin>
+           <!-- disable surefire -- >
+<plugin>
+  <groupId>org.apache.maven.plugins</groupId>
+  <artifactId>maven-surefire-plugin</artifactId>
+  <version>2.7</version>
+  <configuration>
+    <skipTests>true</skipTests>
+  </configuration>
+</plugin>
            <plugin>
                <groupId>net.alchim31.maven</groupId>
                <artifactId>scala-maven-plugin</artifactId>
